@@ -151,6 +151,7 @@ configurations.all {
         force 'org.apache.logging.log4j:log4j-api:2.15.0'
     }
     exclude group: "log4j", module: "log4j"
+    exclude group: "org.matsim", module: "matsim"
 }
 
 dependencies {
@@ -202,11 +203,9 @@ dependencies {
     implementation group: 'org.matsim.contrib', name: 'multimodal', version: '12.0'
     implementation group: 'org.matsim.contrib', name: 'bicycle', version: '12.0'
 
-    implementation(group: 'org.matsim.contrib', name: 'decongestion', version: '12.0') {
-        exclude group: 'org.matsim', module: 'matsim'
-    }
+    implementation(group: 'org.matsim.contrib', name: 'decongestion', version: '12.0')
 
-    implementation(group: 'com.github.LBNL-UCB-STI.matsim', name: 'matsim', version: '12.0-beam-7') {
+    implementation(group: 'com.github.LBNL-UCB-STI.matsim', name: 'matsim', version: '12.0-beam-8') {
         exclude group: 'log4j', module: 'log4j'
     }
 
@@ -225,7 +224,7 @@ dependencies {
 
     implementation("com.uber:h3:3.7.0")
     implementation("com.github.LBNL-UCB-STI:jsprit-wrapper:v0.5.1")
-    implementation("com.github.LBNL-UCB-STI:omx-java:v2.0.1")
+    implementation("com.github.LBNL-UCB-STI:omx-java:v2.0.2")
 
     testImplementation group: 'junit', name: 'junit', version: '4.8'
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.27.0'
@@ -678,43 +677,6 @@ docker {
         password = System.getenv("DOCKER_PASSWORD")
     }
 }
-// Some examples of manual docker file creation can be found https://github.com/bmuschko/gradle-docker-plugin/blob/3736ff644bed1cbfeed6fc7f844a5513c4208bc2/src/functTest/groovy/com/bmuschko/gradle/docker/DockerWorkflowFunctionalTest.groovy#L24
-// Also here: https://bmuschko.github.io/gradle-docker-plugin/#modifying_instructions_of_a_dockerfile_task
-//task createDockerfile(type: Dockerfile, dependsOn: dockerSyncBuildContext) {
-//    from 'beammodel/miniconda3'
-//    label(['maintainer': 'LBNL Beam Team'])
-//    instruction 'RUN apt-get update && apt-get -y install python3 python3-pip python3-rtree libproj-dev proj-data proj-bin libgeos-dev npm'
-//    instruction 'RUN alias python=python3'
-//    instruction 'RUN pip3 install --upgrade setuptools'
-//    instruction 'RUN pip3 install --upgrade pip'
-//    instruction 'RUN pip3 install numpy pandas cython sklearn matplotlib mapclassify descartes geopandas contextily plotly collections-extended psutil requests'
-//    instruction 'RUN pip3 install -U kaleido'
-//    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
-//    workingDir("/app")
-//    instruction 'RUN mkdir /app/output'
-//    // Beam dependencies, resources and compiled Java classes
-//    copyFile("libs", "libs")
-//    copyFile("resources", "resources")
-//    copyFile("classes", "classes")
-//    // Test scenarios
-//    copyFile("test/input/common", "test/input/common")
-//    copyFile("test/input/dtd", "test/input/dtd")
-//    copyFile("test/input/beamville", "test/input/beamville")
-//    copyFile("test/input/sf-light", "test/input/sf-light")
-//
-//    addFile 'src/main/python', 'src/main/python'
-//    addFile 'entrypoint.sh', 'entrypoint.sh'
-//    runCommand('chmod +x /app/entrypoint.sh')
-//    entryPoint('/app/entrypoint.sh')
-//}
-
-//task buildImageWithoutTags(type: DockerBuildImage, dependsOn: createDockerfile) {}
-
-//task buildImage(type: DockerTagImage, dependsOn: buildImageWithoutTags) {
-//    repository = "zaneedell/beam"
-//    tag = version
-//    targetImageId buildImageWithoutTags.getImageId()
-//}
 
 dockerSyncBuildContext {
     from('src/main/python') {
@@ -853,7 +815,7 @@ ext.getDockerRepository = { ->
 
 tasks.register('buildImageWithoutTags', DockerBuildImage) { dependsOn createDockerfile }
 
-// one can build a docker image with command ./gradlew -Ptag=beammodel/beam:0.9.0.0 buildImage
+// one can build a docker image with command ./gradlew -Ptag=beammodel/beam:0.9.12 buildImage
 tasks.register('buildImage', DockerTagImage) {
     description 'Builds the Docker BEAM image, all code and test data are included into the image.'
     group 'Docker'
